--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,6 @@
 </head>
 <body>
   <div id="calendar"></div>
-  <script src="bundle.js"></script>
+  <script src="calendar.js"></script>
 </body>
 </html>
