month view && change view

--- a/src/index.html
+++ b/src/index.html
@@ -10,5 +10,8 @@
 <body>
   <div id="calendar"></div>
   <script src="calendar.js"></script>
+  <script>
+    const calendar = new Calendar(document.querySelector('#calendar'));
+  </script>
 </body>
 </html>
